@@ -1,0 +1,10 @@
+<?php
+// holidays with fixed date
+$input_holidays['fix']['01-01'] = 'Neujahr';
+$input_holidays['fix']['12-25'] = '1. Weihnachtsfeiertag';
+$input_holidays['fix']['12-26'] = '2. Weihnachtsfeiertag';
+
+// holidays with variable date (christian holidays computation is based on the date of easter day)
+$input_holidays['var']['-2'] = 'Karfreitag';
+$input_holidays['var']['0'] = 'Ostersonntag';
+$input_holidays['var']['1'] = 'Ostermontag';
