@@ -162,7 +162,6 @@ $l['birthday_desc']='{NAME} wurde heute {AGE}';
 $l['unauthorized_participants_write']='Sie haben keine Befugnisse, Termine für die folgenden Benutzer festzulegen:<br /><br />{NAMES}<br /><br />Wenn Sie Ihnen eine Einladung schicken, werden die Benutzer den Terminen aber eventuell selbst zustimmen.';
 $l['noCalSelected'] = 'Für diese Übersicht wurden keine Kalender ausgewählt. Wählen Sie in der Administration zumindest einen Kalender aus.';
 
-$l['repeats_not_every']= 'Wird alle %s %s wiederholt';
 $l['rightClickToCopy']='Rechts klicken um Link zu kopieren';
 $l['invitation']='Einladung';
 $l['invitation_update']='Aktualisierung';
@@ -184,3 +183,22 @@ $l['cancelMessage']='Der folgende Termin, zu dem Sie eingeladen waren, wurde abg
 $l['directUrl']='Direktlink';
 $l['cantRemoveOrganizer']="Sie können den Organisator nicht löschen.";
 $l['calendarColor']='Kalenderfarbe';
+
+$l['months']= 'Monate';
+$l['statuses']['CANCELLED']= 'Abgesagt';
+$l['errorOrganizerOnly']= 'Sie sind nicht berechtigt, diesen Termin zu bearbeiten, da Sie nicht der Organisator sind.';
+$l['errorOrganizerOnlyTitle']= 'Sie sind nicht der Organisator';
+$l['eventDeleted']="Der Termin wurde aus Ihrem Kalender gelöscht";
+$l['organizer']='Organisator';
+$l['notifyOrganizer']="Den Organisator per E-Mail über meine Entscheidung informieren";
+$l['iWillAttend']="Ich werde teilnehmen";
+$l['iMightAttend']="Ich werde wahrscheinlich teilnehmen";
+$l['iWillNotAttend']="Ich werde nicht teilnehmen";
+$l['iWillDecideLater']="Ich habe mich noch nicht entschieden";
+$l['eventUpdated']="Der folgende Termin wurde durch den Organisator aktualisiert";
+$l['notifyCancelParticipants']='Möchten Sie eine Absagebenachrichtigung an die Teilnehmer schicken?';
+$l['notifyCancelOrganizer']='Möchten Sie den Organisator per E-Mail informieren, dass Sie nicht teilnehmen?';
+$l['notifyParticipants']='Teilnehmer benachrichtigen?';
+$l['sendNotificationTitle']='Benachrichtigung senden?';
+$l['sendNotification']='Möchten Sie die Teilnehmer per E-Mail informieren?';
+$l['openCalendar']='Kalender öffnen';
